--- a/app/code/Prince/Buynow/view/frontend/templates/buynow.phtml
+++ b/app/code/Prince/Buynow/view/frontend/templates/buynow.phtml
@@ -1,4 +1,5 @@
-<button type="submit" title="<?php /* @escapeNotVerified */ echo __('Buy Now') ?>" id="buy-now" class="action buynow primary" data-mage-init='
+<button type="submit" title="<?php /* @escapeNotVerified */ echo __('Buy Now') ?>" id="buy-now" class="action buynow primary" style="font-size: 1.8rem;padding: 17px 17px;
+    width: 49%;" data-mage-init='
 {
     "Prince_Buynow/js/buy-now": {
         "form": "#product_addtocart_form"
