--- a/app/code/Prince/Buynow/view/frontend/templates/buynow.phtml
+++ b/app/code/Prince/Buynow/view/frontend/templates/buynow.phtml
@@ -1,10 +1,10 @@
-<button type="submit" title="<?php /* @escapeNotVerified */ echo __('Buy Now') ?>" id="buy-now" class="action buynow primary" style="font-size: 1.8rem;padding: 17px 17px;
-    width: 49%;" data-mage-init='
-{
-    "Prince_Buynow/js/buy-now": {
-        "form": "#product_addtocart_form"
-    }
-}
+<button type="submit" title="<?php /* @escapeNotVerified */ echo __('Buy Now') ?>" id="buy-now" class="action tocart buynow primary"
+    data-mage-init='
+	{
+	    "Prince_Buynow/js/buy-now": {
+	        "form": "#product_addtocart_form"
+	    }
+	}
 '>
     <span><?php /* @escapeNotVerified */ echo __('Buy Now') ?></span>
 </button>
