--- a/app/code/Prince/Buynow/view/frontend/layout/catalog_product_view.xml
+++ b/app/code/Prince/Buynow/view/frontend/layout/catalog_product_view.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+    	<css src="Prince_Buynow::css/buynow.css"/>
+    </head>
     <body>
         <referenceBlock name="product.info.addtocart">
             <block class="Magento\Framework\View\Element\Template" template="Prince_Buynow::buynow.phtml"/>
