--- a/view/frontend/layout/catalog_category_view.xml
+++ b/view/frontend/layout/catalog_category_view.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0"?>
-<page layout="2columns-left" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page layout="2columns-left" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-    	<css src="Prince_Buynow::css/buynow.css"/>
+        <css src="Prince_Buynow::css/buynow.css"/>
     </head>
+    <body>
+        <referenceBlock name="category.product.addto">
+            <block class="Prince\Buynow\Block\Product\ListProduct"
+                   ifconfig="buynow/general/enable_list"
+                   name="product.buynow.list" before="-"
+                   template="Prince_Buynow::buynow-list.phtml"/>
+        </referenceBlock>
+    </body>
 </page>
