--- a/view/frontend/templates/buynow-view.phtml
+++ b/view/frontend/templates/buynow-view.phtml
@@ -1,7 +1,6 @@
 <?php $helper = $this->helper("Prince\Buynow\Helper\Data"); ?>
-<?php $addtocartId = $helper->getConfig('buynow/general/addtocart_id'); ?>
-<?php $buttonTitle = $helper->getConfig('buynow/general/button_title'); ?>
-<?php $formId = $addtocartId ? $addtocartId : "product_addtocart_form"; ?>
+<?php $formId = $helper->getAddToCartFormId(); ?>
+<?php $buttonTitle = $helper->getButtonTitle() ?>
 <div class="buynow-button">
     <button type="submit" title="<?php /* @escapeNotVerified */ echo __($buttonTitle) ?>" id="buy-now" class="action primary" data-mage-init='
     {
