--- a/view/frontend/templates/buynow-list.phtml
+++ b/view/frontend/templates/buynow-list.phtml
@@ -20,7 +20,7 @@
                     data-mage-init='
                     {
                         "Prince_Buynow/js/buy-now": {
-                            "form": "#product_addtocart_form_<?php echo $postParams['data']['product']; ?>",
+                            "form": "#product_addtocart_form_<?php echo $postParams['data']['product']; ?>"
                         }
                     }
                 '>
