--- a/view/frontend/layout/catalog_category_view.xml
+++ b/view/frontend/layout/catalog_category_view.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0"?>
+<!--
+/**
+ * MagePrince
+ * Copyright (C) 2020 Mageprince <info@mageprince.com>
+ *
+ * @package Mageprince_BuyNow
+ * @copyright Copyright (c) 2020 Mageprince (http://www.mageprince.com/)
+ * @license http://opensource.org/licenses/gpl-3.0.html GNU General Public License,version 3 (GPL-3.0)
+ * @author MagePrince <info@mageprince.com>
+ */
+ -->
 <page layout="2columns-left" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="Prince_Buynow::css/buynow.css"/>
+        <css src="Mageprince_BuyNow::css/buynow.css"/>
     </head>
     <body>
         <referenceBlock name="category.product.addto">
-            <block class="Prince\Buynow\Block\Product\ListProduct"
+            <block class="Mageprince\BuyNow\Block\Product\ListProduct"
                    ifconfig="buynow/general/enable_list"
                    name="product.buynow.list" before="-"
-                   template="Prince_Buynow::buynow-list.phtml"/>
+                   template="Mageprince_BuyNow::buynow-list.phtml"/>
         </referenceBlock>
     </body>
 </page>
