--- a/view/frontend/templates/buynow-list.phtml
+++ b/view/frontend/templates/buynow-list.phtml
@@ -35,7 +35,7 @@
                         }
                     }
                 '>
-                <span><?php /* @noEscape */ echo __($buttonTitle) ?></span>
+                <span><?= /* @noEscape */ __($buttonTitle) ?></span>
             </button>
         </form>
     </div>
