--- a/view/frontend/templates/buynow-list.phtml
+++ b/view/frontend/templates/buynow-list.phtml
@@ -9,29 +9,32 @@
  * @author MagePrince <info@mageprince.com>
  */
 ?>
-<?php $product = $block->getProduct(); ?>
-<?php $helper = $this->helper("Mageprince\BuyNow\Helper\Data"); ?>
+<?php
+/** @var \Mageprince\BuyNow\Block\Product\ListProduct $block */
+$product = $block->getProduct();
+?>
+<?php $helper = $this->helper(\Mageprince\BuyNow\Helper\Data::class); ?>
 <?php $buttonTitle = $helper->getButtonTitle() ?>
-<?php if ($product->isSaleable()) : ?>
+<?php if ($product->isSaleable()): ?>
     <?php $postParams = $block->getAddToCartPostParams($product); ?>
     <div class="buynow-btn">
-        <form action="<?php /* @noEscape */ echo $postParams['action']; ?>"
-              id="product_addtocart_form_<?php /* @noEscape */ echo $postParams['data']['product']; ?>"
+        <form action="<?= /* @noEscape */ $postParams['action']; ?>"
+              id="product_addtocart_form_<?= /* @noEscape */ $postParams['data']['product']; ?>"
               method="post">
-            <input type="hidden" 
-                   name="product"
-                   value="<?php /* @noEscape */ echo $postParams['data']['product']; ?>">
             <input type="hidden"
-                   name="<?php /* @noEscape */ echo 'uenc'; ?>"
-                   value="<?php /* @noEscape */ echo $postParams['data']['uenc']; ?>">
-            <?php echo $block->getBlockHtml('formkey')?>
+                   name="product"
+                   value="<?= /* @noEscape */ $postParams['data']['product']; ?>">
+            <input type="hidden"
+                   name="<?= /* @noEscape */ 'uenc'; ?>"
+                   value="<?= /* @noEscape */ $postParams['data']['uenc']; ?>">
+            <?= $block->getBlockHtml('formkey') ?>
             <button type="submit"
-                    title="<?php echo $block->escapeHtml(__($buttonTitle)); ?>"
+                    title="<?= $block->escapeHtml(__($buttonTitle)) ?>"
                     class="action tocart buynow primary"
                     data-mage-init='
                     {
                         "Mageprince_BuyNow/js/buy-now": {
-                            "form": "#product_addtocart_form_<?php echo $postParams['data']['product']; ?>"
+                            "form": "#product_addtocart_form_<?= /* @noEscape */ $postParams['data']['product'] ?>"
                         }
                     }
                 '>
