--- a/view/frontend/templates/buynow-view.phtml
+++ b/view/frontend/templates/buynow-view.phtml
@@ -9,21 +9,21 @@
  * @author MagePrince <info@mageprince.com>
  */
 ?>
-<?php $helper = $this->helper("Mageprince\BuyNow\Helper\Data"); ?>
+<?php $helper = $this->helper(\Mageprince\BuyNow\Helper\Data::class); ?>
 <?php $formId = $helper->getAddToCartFormId(); ?>
 <?php $buttonTitle = $helper->getButtonTitle() ?>
 <div class="buynow-button">
     <button type="submit"
-            title="<?= /* @escapeNotVerified */ __($buttonTitle) ?>"
+            title="<?= /* @noEscape */ __($buttonTitle) ?>"
             id="buy-now"
             class="action tocart primary"
             data-mage-init='
             {
                 "Mageprince_BuyNow/js/buy-now": {
-                    "form": "#<?php echo $formId; ?>"
+                    "form": "#<?= /* @noEscape */ $formId; ?>"
                 }
             }
             '>
-        <span><?= /* @escapeNotVerified */ __($buttonTitle) ?></span>
+        <span><?= /* @noEscape */ __($buttonTitle) ?></span>
     </button>
 </div>
