--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -10,9 +10,16 @@
   float: left;
 }
 
+.buy-now-btn {
+    margin-right: 1%;
+    width: 49%;
+    line-height: 3.6rem;
+}
+
 @media(max-width: 767px){
   .catalog-category-view button.buynow{
     margin-top: 5px;
     margin-left: 0px;
   }
 }
+
