--- a/view/frontend/layout/multishipping_checkout_success.xml
+++ b/view/frontend/layout/multishipping_checkout_success.xml
@@ -13,7 +13,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Magento\Framework\View\Element\Template"  name="update.minicart"  template="Mageprince_BuyNow::updatecart.phtml" cacheable="false" />
+            <block class="Magento\Framework\View\Element\Template"  name="buynow.update.minicart"  template="Mageprince_BuyNow::updatecart.phtml" cacheable="false" />
         </referenceContainer>
     </body>
 </page>
