Improvements and check compatibility with Magento and Adobe commerce 2.4.7

--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -2,27 +2,39 @@
 <!--
 /**
  * MagePrince
- * Copyright (C) 2020 Mageprince <info@mageprince.com>
  *
- * @package Mageprince_BuyNow
- * @copyright Copyright (c) 2020 Mageprince (http://www.mageprince.com/)
- * @license http://opensource.org/licenses/gpl-3.0.html GNU General Public License,version 3 (GPL-3.0)
- * @author MagePrince <info@mageprince.com>
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to the mageprince.com license that is
+ * available through the world-wide-web at this URL:
+ * https://mageprince.com/end-user-license-agreement
+ *
+ * DISCLAIMER
+ *
+ * Do not edit or add to this file if you wish to upgrade this extension to newer
+ * version in the future.
+ *
+ * @category    MagePrince
+ * @package     Mageprince_BuyNow
+ * @copyright   Copyright (c) MagePrince (https://mageprince.com/)
+ * @license     https://mageprince.com/end-user-license-agreement
  */
  -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="product.info.addtocart">
-            <block class="Magento\Catalog\Block\Product\View"
-                   name="product.buynow"
-                   template="Mageprince_BuyNow::buynow-view.phtml"
-                   before="-" ifconfig="buynow/general/enable_view"/>
+            <block class="Magento\Catalog\Block\Product\View" name="mageprince.buynow.product.simple" template="Mageprince_BuyNow::buynow-view.phtml" before="-" ifconfig="buynow/general/enable_view">
+                <arguments>
+                    <argument name="view_model" xsi:type="object">Mageprince\BuyNow\ViewModel\BuyNow</argument>
+                </arguments>
+            </block>
         </referenceBlock>
         <referenceBlock name="product.info.addtocart.additional">
-            <block class="Magento\Catalog\Block\Product\View"
-                   name="product.buynow.config"
-                   template="Mageprince_BuyNow::buynow-view.phtml"
-                   before="-" ifconfig="buynow/general/enable_view"/>
+            <block class="Magento\Catalog\Block\Product\View" name="mageprince.buynow.product.config" template="Mageprince_BuyNow::buynow-view.phtml" before="-" ifconfig="buynow/general/enable_view">
+                <arguments>
+                    <argument name="view_model" xsi:type="object">Mageprince\BuyNow\ViewModel\BuyNow</argument>
+                </arguments>
+            </block>
         </referenceBlock>
     </body>
 </page>
