--- a/view/frontend/layout/catalogsearch_advanced_result.xml
+++ b/view/frontend/layout/catalogsearch_advanced_result.xml
@@ -2,22 +2,33 @@
 <!--
 /**
  * MagePrince
- * Copyright (C) 2020 Mageprince <info@mageprince.com>
  *
- * @package Mageprince_BuyNow
- * @copyright Copyright (c) 2020 Mageprince (http://www.mageprince.com/)
- * @license http://opensource.org/licenses/gpl-3.0.html GNU General Public License,version 3 (GPL-3.0)
- * @author MagePrince <info@mageprince.com>
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to the mageprince.com license that is
+ * available through the world-wide-web at this URL:
+ * https://mageprince.com/end-user-license-agreement
+ *
+ * DISCLAIMER
+ *
+ * Do not edit or add to this file if you wish to upgrade this extension to newer
+ * version in the future.
+ *
+ * @category    MagePrince
+ * @package     Mageprince_BuyNow
+ * @copyright   Copyright (c) MagePrince (https://mageprince.com/)
+ * @license     https://mageprince.com/end-user-license-agreement
  */
  -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
             <referenceBlock name="catalogsearch.product.addto">
-                <block class="Mageprince\BuyNow\Block\Product\ListProduct"
-                       ifconfig="buynow/general/enable_advanced_search"
-                       name="product.buynow.search"
-                       before="-" template="Mageprince_BuyNow::buynow-list.phtml"/>
+                <block class="Mageprince\BuyNow\Block\Product\ListProduct" name="mageprince.buynow.product.advanced.search" before="-" template="Mageprince_BuyNow::buynow-list.phtml" ifconfig="buynow/general/enable_advanced_search">
+                    <arguments>
+                        <argument name="view_model" xsi:type="object">Mageprince\BuyNow\ViewModel\BuyNow</argument>
+                    </arguments>
+                </block>
             </referenceBlock>
         </referenceContainer>
     </body>
