--- a/view/frontend/templates/buynow.phtml
+++ b/view/frontend/templates/buynow.phtml
@@ -22,8 +22,7 @@
 <?php
 /** @var \Mageprince\BuyNow\Block\Product\ListProduct $block */
 $product = $block->getProduct();
-$helper = $this->helper(\Mageprince\BuyNow\Helper\Data::class);
-$buttonTitle = $helper->getButtonTitle();
+$buttonTitle = $block->getButtonTitle() ?: 'Buy Now';
 ?>
 <?php if ($product->isSaleable()): ?>
     <?php $postParams = $block->getAddToCartPostParams($product); ?>
